2005-03-03  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/mcu.rb:

	Mark the name of the provider as translatable.

2005-03-02  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	Do not add the books twice in the library.

2005-03-01  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/amazon.rb:

	Setup the online information url according to the selected locale.

2005-02-28  Constantine Evans  <cevans@costinet.org>

	* lib/alexandria/book_providers/amazon.rb:

	Added workaround for an Amazon US encoding bug. See comments in code
	for details.

2005-02-28  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/library.rb:

	Specialized the ISBN validation exceptions.

	* lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/new_book_dialog.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb:

	Follow latest change.

	* lib/alexandria/ui/new_book_dialog.rb:

	Fixes #974 (when a book returned by a search by title/authors/keyword
	contains an invalid ISBN, propose the user to either add the book with a
	blank ISBN or cancel the add).

2005-02-25  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb,
	  data/alexandria/glade/main_app.glade:

	- Filter the model with a Gtk::TreeModelFilter ;
	- Each view has its own Gtk::TreeModelSort ;
	- Freeze/unfreeze the icon view each time the model changes ;
	- Dispatch the library load in a separate thread (code is commented).

2005-02-24  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	More fixes.

2005-02-23  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/library.rb,
	  lib/alexandria/ui/main_app.rb:

	Fixes some defects introduced by the view model change.

2005-02-22  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	Changed all references to book.isbn to retrieve iterators model to
	book.ident.

	* AUTHORS,
	  lib/alexandria.rb:

	Added Constantine.
